--- a/ZeiterfassungPierburg/Views/Home/Index.cshtml
+++ b/ZeiterfassungPierburg/Views/Home/Index.cshtml
@@ -82,17 +82,42 @@
         <!-- ./col -->
         <div class="col-lg-3 col-xs-6">
             <div class="box-footer text-black">
-                <h4>Stücke hergestellt letzte Woche:</h4>
+                <h4>Statistik der Stücke:</h4>
 
                 <div class="row">
-                    <div class="col-sm-8">
+                    <div class="col-sm-12">
                         <div class="clearfix">
-                            <span class="pull-left"><h3> @ViewBag.StückeWoche </h3></span>
-                            <!-- /.col -->
+                            <span>letzte Woche gesamt: <h3> @ViewBag.StückeWoche </h3></span>
+                            <hr />
+                        </div>
+                        <div class="col-sm-12">
+                            <div class="clearfix">
+                                <h5><span id="day0"></span><span class="pull-right"><span class="label label-warning"> @ViewBag.StückeToday </span></span></h5>
+                            </div>
+                            <div class="clearfix">
+                                <h5><span id="day1"></span><span class="pull-right"><span class="label label-warning"> @ViewBag.StückeMinusOneDay </span></span></h5>
+                            </div>
+                            <div class="clearfix">
+                                <h5><span id="day2"></span><span class="pull-right"><span class="label label-warning"> @ViewBag.StückeMinusTwoDays </span></span></h5>
+                            </div>
+                            <div class="clearfix">
+                                <h5><span id="day3"></span><span class="pull-right"><span class="label label-warning"> @ViewBag.StückeMinusThreeDays</span> </span></h5>
+                            </div>
+                            <div class="clearfix">
+                                <h5><span id="day4"></span> <span class="pull-right"><span class="label label-warning"> @ViewBag.StückeMinusFourDays </span></span></h5>
+                            </div>
+                            <div class="clearfix">
+                                <h5><span id="day5"></span><span class="pull-right"> <span class="label label-warning"> @ViewBag.StückeMinusFiveDays </span></span></h5>
+                            </div>
+                            <div class="clearfix">
+                                <h5><span id="day6"></span><span class="pull-right"> <span class="label label-warning"> @ViewBag.StückeMinusSixDays</span> </span></h5>
+                            </div>
+
+
                         </div>
                     </div>
-                    </div>
                 </div>
+            </div>
         </div>
         <!-- ./col -->
 
@@ -171,6 +196,93 @@
                 </div>
             </div>
         </div>
-    </div>
+        <div class="col-lg-6 col-xs-6">
+            <div class="box-footer text-black">
+                <h4>Chart - Test</h4>
+
+                <div class="row">
+                    <div class="col-sm-12">
+                        <div id="piechart"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
 </section>
 
+
+@section scripts{
+
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+
+
+
+    <script>
+
+
+
+        $(document).ready(function () {
+
+
+            var weekday = new Array(7);
+            weekday[0] = "Sontag";
+            weekday[1] = "Montag";
+            weekday[2] = "Dienstag";
+            weekday[3] = "Mittwoch";
+            weekday[4] = "Donnerstag";
+            weekday[5] = "Freitag";
+            weekday[6] = "Samstag";
+
+        var i;
+        for (i = 0; i < 7; i++) {
+
+
+            n = new Date();
+            n.setDate(n.getDate() - i);
+
+            y = n.getFullYear();
+            m = n.getMonth() + 1;
+            d = n.getDate();
+
+
+            var a = weekday[n.getDay()];
+
+            document.getElementById("day"+i).innerHTML = a +", "+ d + "." + m + ".     ";
+        }
+        /*
+            var dateString = "12/22/2017";
+            var date1 = new Date(dateString);
+            var daysPrior = 28;
+            date1.setDate(date1.getDate() - daysPrior));
+        print(date1.toISOString()); 
+        */
+
+
+    });
+
+
+
+
+    // Load google charts
+    google.charts.load('current', { 'packages': ['corechart'] });
+    google.charts.setOnLoadCallback(drawChart);
+
+    // Draw the chart and set the chart values
+    function drawChart() {
+        var data = google.visualization.arrayToDataTable([
+            ['Task', 'Hours per Day'],
+            ['Test1', 5],
+            ['Test2', 2],
+            ['Test3', 4],
+            ['Tst4', 2],
+            ['Test5', 8]
+        ]);
+
+        // Optional; add a title and set the width and height of the chart
+        var options = { 'title': 'Durschnittproduktivität', 'width': 550, 'height': 400 };
+
+        // Display the chart inside the <div> element with id="piechart"
+        var chart = new google.visualization.PieChart(document.getElementById('piechart'));
+        chart.draw(data, options);
+    }
+    </script>
+}
