--- a/ZeiterfassungPierburg/Views/MitarbeiterInSchicht/Index.cshtml
+++ b/ZeiterfassungPierburg/Views/MitarbeiterInSchicht/Index.cshtml
@@ -67,55 +67,62 @@
                             <th>
                                 @Html.DisplayNameFor(model => model.Bemerkung)
                             </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Auswertung)
+                            </th>
+
                             <th></th>
                         </tr>
                     </thead>
                     <tbody>
                         @foreach (var item in Model)
                         {
-                        <tr>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Datum)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Art)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Anlage)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Name)
-                            </td>
+                            <tr>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Datum)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Art)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Anlage)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Name)
+                                </td>
 
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Personalnummer)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Kostenstelle)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.SAPAPNr)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.ZeichenNr)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Stück)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.DirStunden)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.InDirStunden)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Bemerkung)
-                            </td>
-                            <td>
-                                @Html.ActionLink("Bearbeiten", "Edit", new { id = item.ID }) |
-                                @Html.ActionLink("Löschen", "Delete", new { id = item.ID }, new { onclick = "return confirm('Wirklich löschen?');" })
-                            </td>
-                        </tr>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Personalnummer)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Kostenstelle)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.SAPAPNr)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.ZeichenNr)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Stück)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.DirStunden)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.InDirStunden)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Bemerkung)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Auswertung)%
+                                </td>
+                                <td>
+                                    @Html.ActionLink("Bearbeiten", "Edit", new { id = item.ID }) |
+                                    @Html.ActionLink("Löschen", "Delete", new { id = item.ID }, new { onclick = "return confirm('Wirklich löschen?');" })
+                                </td>
+                            </tr>
                         }
                     </tbody>
                 </table>
@@ -132,18 +139,18 @@
 @section scripts{
     @Styles.Render("~/bundles/tableStyleBundle")
     @Scripts.Render("~/bundles/tableScriptBundle")
-
+    @Scripts.Render("~/bundles/dataTablesPlugins")
+    <!--
     <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
     <script src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.datatables.net/buttons/1.6.1/js/dataTables.buttons.min.js"></script>
     <script src="https://cdn.datatables.net/buttons/1.6.1/js/buttons.flash.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/pdfmake.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/vfs_fonts.js"></script>
-    <script src="https://cdn.datatables.net/buttons/1.6.1/js/buttons.html5.min.js"></script>
-    <script src="https://cdn.datatables.net/buttons/1.6.1/js/buttons.print.min.js"></script>
-
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/pdfmake.min.js"></script>-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/vfs_fonts.js"></script>-
+    <script src="https://cdn.datatables.net/buttons/1.6.1/js/buttons.html5.min.js"></script>-
+    <script src="https://cdn.datatables.net/buttons/1.6.1/js/buttons.print.min.js"></script>-
+    -->
 
     <script>
         function addDays(date, days) {
@@ -198,7 +205,7 @@
                     buttons: [
                         'copy', 'csv', 'excel', 'pdf', 'print'
                     ]
-                } );
+                });
 
             $('#min, #max, #schicht').change(function () {
                 table.draw();
