--- a/ZeiterfassungPierburg/Views/Shared/Error.cshtml
+++ b/ZeiterfassungPierburg/Views/Shared/Error.cshtml
@@ -4,6 +4,14 @@
     ViewBag.Title = "Error";
 }
 
-<h1 class="text-danger">Error.</h1>
-<h2 class="text-danger">An error occurred while processing your request.</h2>
-
+<section class="content container-fluid">
+    <div class="box-header with-border">
+        <h1>☹</h1>
+        <h2>
+            Das ist nicht gelungen. Wahrscheinlich hast du keinen Zugriff oder sie Seite existiert nicht.
+        </h2>
+        <h2>
+            Falls das häufiger passiert, kontaktiere bitte den Administrator.
+        </h2>
+    </div>
+</section>
