--- a/ZeiterfassungPierburg/Views/Fertigungsteil/Index.cshtml
+++ b/ZeiterfassungPierburg/Views/Fertigungsteil/Index.cshtml
@@ -18,6 +18,9 @@
                                 @Html.DisplayNameFor(model => model.teZEIT)
                             </th>
                             <th>
+                                @Html.DisplayNameFor(model => model.IstAktiv)
+                            </th>
+                            <th>
 
                             </th>
                         </tr>
@@ -35,7 +38,9 @@
                             <td>
                                 @Html.DisplayFor(modelItem => item.teZEIT)
                             </td>
-
+                            <td>
+                                @Html.DisplayFor(modelItem => item.IstAktiv)
+                            </td>
                             <td>
                                 @Html.ActionLink("Bearbeiten", "Edit", new { id = item.ID }) |
                                 @Html.ActionLink("Löschen", "Delete", new { id = item.ID }, new { onclick = "return confirm('Wirklich löschen?');" })
