--- a/ZeiterfassungPierburg/Views/Produktionsanlage/Index.cshtml
+++ b/ZeiterfassungPierburg/Views/Produktionsanlage/Index.cshtml
@@ -24,6 +24,9 @@
                                 @Html.DisplayNameFor(model => model.IstEineMaschine)
                             </th>
                             <th>
+                                @Html.DisplayNameFor(model => model.IstAktiv)
+                            </th>
+                            <th>
 
                             </th>
                         </tr>
@@ -31,28 +34,31 @@
                     <tbody>
                         @foreach (var item in Model)
                         {
-                            <tr>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Bezeichner)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.APNr)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Kostenstelle)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.SAPAPNr)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.IstEineMaschine)
-                                </td>
+                        <tr>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Bezeichner)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.APNr)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Kostenstelle)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.SAPAPNr)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.IstEineMaschine)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.IstAktiv)
+                            </td>
 
-                                <td>
-                                    @Html.ActionLink("Bearbeiten", "Edit", new { id = item.ID }) |
-                                    @Html.ActionLink("Löschen", "Delete", new { id = item.ID }, new { onclick = "return confirm('Bist du sicher?');" })
-                                </td>
-                            </tr>
+                            <td>
+                                @Html.ActionLink("Bearbeiten", "Edit", new { id = item.ID }) |
+                                @Html.ActionLink("Löschen", "Delete", new { id = item.ID }, new { onclick = "return confirm('Bist du sicher?');" })
+                            </td>
+                        </tr>
                         }
                     </tbody>
                 </table>
