--- a/ZeiterfassungPierburg/Views/NeueZeiterfassung/CreateMEBA.cshtml
+++ b/ZeiterfassungPierburg/Views/NeueZeiterfassung/CreateMEBA.cshtml
@@ -210,7 +210,8 @@
         nameNew.setAttribute("id", "name" + currentIndex);
         nameNew.setAttribute("name", "name" + currentIndex);
         nameNew.setAttribute("required", "true");
-        
+        nameNew.selectedIndex = name.selectedIndex;
+            
 
         var panlageNew = panlage.cloneNode(true);
         panlageNew.setAttribute("id", "panlage" + currentIndex);
