add authorize method for edit and delete actions

--- a/ZeiterfassungPierburg/Views/Shared/_Layout.cshtml
+++ b/ZeiterfassungPierburg/Views/Shared/_Layout.cshtml
@@ -74,12 +74,12 @@
                         <li>@Html.ActionLink("Übersicht - Bänder", "Index", "MitarbeiterInSchicht")</li>
                         <li>@Html.ActionLink("Übersicht - MEBA  ", "IndexMEBA", "MitarbeiterInSchicht")</li>
                         _____________________________
-                        <!--<li> <li>@Html.ActionLink("Schichten", "Index", "SchichtInfo")</li>-->
+                        <!-- <li>@Html.ActionLink("Schichten", "Index", "SchichtInfo")</li>-->
                         <li>@Html.ActionLink("Produktionsanlagen", "Index", "Produktionsanlage")</li>
                         <li>@Html.ActionLink("Fertigungsteile", "Index", "Fertigungsteil")</li>
                         <li>@Html.ActionLink("Mitarbeiter", "Index", "Mitarbeiter")</li>
                         <li>@Html.ActionLink("Teile bei Anlagen", "Index", "TeileInProduktionsanlage")</li>
-                        <li>@Html.ActionLink("Verwaltung", "Index", "Zugriffsrechte")</li>
+                        <!--<li>@Html.ActionLink("Verwaltung", "Index", "Zugriffsrechte")</li>-->
                     </ul>
     <!-- /.sidebar-menu -->
 </section>
